# microlp

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md
.github/workflows/: benchmark.yaml  ci.yaml
benchmark/: Cargo.toml  build.rs
benchmark/src/: contenders.rs  corpus.rs  main.rs  report.rs
docs/superpowers/plans/: 2026-07-08-milp-bb-refactor.md
docs/superpowers/specs/: 2026-07-08-milp-bb-refactor-design.md
src/: ARCHITECTURE.md  broken_tests.rs  lib.rs  lu.rs  main.rs  mps.rs  ordering.rs  presolve.rs  solver.rs  sparse.rs
src/mip/: branching.rs  cuts.rs  mod.rs  node.rs  params.rs  propagate.rs
src/problems_solvers/: tsp.rs
src/tests/: aoc.rs  aoc2.rs  general.rs  mip_api.rs  mod.rs  presolve_api.rs  regressions.rs  resume.rs  tsp.rs
src/tests/tsp/: tsp-test.rs
tests/: exhaustive_mip.rs
tests/suite/: README.md  lp_format.rs  main.rs  model.rs  mps_milp.rs  oracles.rs  rng.rs  verify.rs
tests/suite/cases/: incremental.rs  lp_random.rs  lp_unit.rs  milp_families.rs  milp_random.rs  milp_unit.rs  milpbench.rs  milpbench_xhard.rs  miplib.rs  mod.rs  netlib.rs  warm_restart.rs
tests/suite/data/: README.md
tests/suite/data/medium/milpbench/: README.md
tests/suite/data/netlib/: blend.mps
tests/suite/data/xhard/milpbench/: README.md
wasm-example/: Cargo.toml  README.md  test.js
wasm-example/src/: lib.rs
