[package]
name = "microlp"
version = "0.4.0"
authors = [
    "Alexey Zatelepin <alex.zatelepin@gmail.com>",
    "Specy <specy.dev@gmail.com>"
]
edition = "2021"
license = "Apache-2.0"
description = "A fast linear programming solver library."
repository = "https://github.com/Specy/microlp/"
readme = "README.md"
keywords = ["linear-programming", "optimization"]
categories = ["mathematics", "science"]
exclude = ["tests/suite/data", "benchmark", "BENCHMARK.md"]

[dependencies]
sprs = { version = "0.11.4", default-features = false }
log = "0.4.11"
web-time = "1.1.0"

[dev-dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
env_logger = "0.11.5"
mps = { version = "1.0.1", default-features = false }
lp_parser_rs = "4.1.0"
flate2 = "1.1.9"

# The benchmark harness lives in its own workspace member so that its solver
# dependencies (HiGHS and friends) never enter the library's dependency graph,
# its dev-dependencies, or plain `cargo test` builds.
[workspace]
members = ["benchmark"]

[profile.test]
opt-level = 3

[[test]]
name = "suite"
path = "tests/suite/main.rs"
harness = false
