[package]
name = "microlp"
version = "0.5.0"
authors = [
    "Alexey Zatelepin <alex.zatelepin@gmail.com>",
    "Specy <specy.dev@gmail.com>"
]
edition = "2021"
license = "Apache-2.0"
description = "A fast linear programming solver library."
repository = "https://github.com/Specy/microlp/"
readme = "README.md"
keywords = ["linear-programming", "optimization"]
categories = ["mathematics", "science"]
exclude = ["tests/suite/data", "benchmark", "BENCHMARK.md"]

[dependencies]
sprs = { version = "0.11.4", default-features = false }
log = "0.4.33"
web-time = "1.1.0"
# Optional, off by default: only built for `cargo test --features highs`, which
# turns on the suite's HiGHS cross-checks. Building it needs a C++ toolchain and
# CMake, so plain `cargo test` and downstream consumers never pull it in.
highs = { version = "2.4.0", optional = true }

[features]
# Cross-validate suite results against HiGHS (see the optional `highs` dep).
highs = ["dep:highs"]

[dev-dependencies]
rand = "0.10.2"
rand_pcg = "0.10.2"
env_logger = "0.11.11"
mps = { version = "1.0.1", default-features = false }
lp_parser_rs = "4.1.0"
flate2 = "1.1.9"
bit-set = { version = "0.11.1", default-features = false }

# The benchmark harness lives in its own workspace member so that its solver
# dependencies (SCIP, Clarabel, and friends) never enter the library's
# dependency graph, its dev-dependencies, or plain `cargo test` builds. HiGHS is
# additionally exposed as the optional, non-default `highs` feature above so the
# suite can cross-check against it on demand; it is never built unless enabled.
[workspace]
members = ["benchmark"]

[profile.test]
opt-level = 3

[[test]]
name = "suite"
path = "tests/suite/main.rs"
harness = false
